# Clustering-Bandit

./: README.md  plot.ipynb  pyproject.toml
scripts/: run_multiple.py  run_single.py
src/bandit_clustering/: __init__.py  config.py
src/bandit_clustering/agents/: __init__.py  adaptive_ucb.py  baselines.py  fixed_binned_ucb.py
src/bandit_clustering/bandits/: __init__.py  candidate_env.py  metrics.py  reward_functions.py
src/bandit_clustering/multi_user/: __init__.py  clustering.py  shared_stats.py  simulator.py
src/bandit_clustering/partition/: __init__.py  criterion.py  node.py  splitter.py  tree_partition.py
src/bandit_clustering/utils/: logging.py  rng.py
tests/: test_criterion.py  test_env.py  test_integration.py  test_partition.py  test_reward_functions.py  test_splitter.py
